--- a/src/app/components/vertical-list/vertical-list.component.html
+++ b/src/app/components/vertical-list/vertical-list.component.html
@@ -1,3 +1,7 @@
-<div class="vertical-list">
-    <h1>Projektoid</h1>
+<div [ngClass]="vertical_list" (mouseleave)="hideDiv()">
+    <div id="title_div">
+        <h1>Projects</h1>
+    </div>
+    <div [ngClass]="project_list"></div>
 </div>
+<div id="invisible_div" (mouseover)="showDiv()"></div>
