--- a/src/app/components/navigation-list/navigation-list.component.html
+++ b/src/app/components/navigation-list/navigation-list.component.html
@@ -1,1 +1,9 @@
-<p>navigation-list works!</p>
+<div class="navigation-list">
+    <div class="switch-panel">
+        <div [ngClass]="switch_frame" (click)="switchOn()">
+            <div [ngClass]="switch">
+
+            </div>
+        </div>
+    </div>
+</div>
