--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,16 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 body {
+    overflow: hidden;
     height: 100%;
     width: 100%;
     margin: 0;
+}
+
+.dark {
+    background-color: gray;
 }
