refactoring and style added

--- a/src/app/components/navigation-list/navigation-list.component.html
+++ b/src/app/components/navigation-list/navigation-list.component.html
@@ -4,6 +4,13 @@
             <div [ngClass]="switch">
 
             </div>
+            <div id='day_part'>
+                <img class='light_icon' [src]='light_mode_image' />
+            </div>
+
+            <div id='night_part'>
+                <img class='light_icon' [src]='night_mode_image' />
+            </div>
         </div>
     </div>
 </div>
