--- a/src/app/components/navigation-list/navigation-list.component.scss
+++ b/src/app/components/navigation-list/navigation-list.component.scss
@@ -8,6 +8,27 @@
     z-index: 0;
 }
 
+#day_part {
+    width: 50%;
+    height: 100%;
+    float: left;
+    position: relative;
+}
+
+#night_part {
+    width: 50%;
+    height: 100%;
+    float: right;
+    position: relative;
+}
+
+.light_icon {
+    width: auto;
+    height: 100%;
+    margin: auto;
+    display: block;
+}
+
 .switch-panel {
     height: 100%;
     width: 10%;
@@ -27,10 +48,11 @@
 }
 
 .switch {
-    position: relative;
+    position: absolute;
     background-color: black;
     height: 100%;
     width: 50%;
+    z-index: 2;
     overflow: hidden;
     display: inline-block;
 }
