--- a/src/app/components/vertical-list/vertical-list.component.scss
+++ b/src/app/components/vertical-list/vertical-list.component.scss
@@ -12,7 +12,7 @@
 #title_div {
     height: 10%;
     text-align: center;
-    border-bottom: 1px dashed #00d4ff;
+    border-bottom: 1px dashed #967d68;
     justify-content: center;
     align-items: center;
 }
@@ -21,13 +21,19 @@
     position: relative;
     margin: 0;
     font-family: Ahrefs, Helvetica, Arial, sans-serif;
-    color: #00d4ff;
+    color: #967d68;
 }
 
 .project-list {
     width: 30ex;
     height: 90%;
     position: relative;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 #invisible_div {
@@ -57,7 +63,7 @@
         transform: translateX(-30ex);
     }
     100% {
-        transform: translateX(29ex);
+        transform: translateX(29.8ex);
     }
 }
 
@@ -66,7 +72,7 @@
         transform: translateX(-30ex);
     }
     100% {
-        transform: translateX(29ex);
+        transform: translateX(29.8ex);
     }
 }
 
@@ -75,7 +81,7 @@
         transform: translateX(-30ex);
     }
     100% {
-        transform: translateX(29ex);
+        transform: translateX(29.8ex);
     }
 }
 
