--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,7 @@ body {
 .dark {
     background-color: gray;
 }
+
+h1 {
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
