--- a/src/app/components/vertical-list/vertical-list.component.scss
+++ b/src/app/components/vertical-list/vertical-list.component.scss
@@ -28,6 +28,16 @@
     width: 30ex;
     height: 90%;
     position: relative;
+    overflow-y: scroll;
+}
+
+.project-list::-webkit-scrollbar {
+    display: none;
+}
+
+.project-list {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 ul {
